Fix user's cocktails not showing. Add padding to cocktails view. Add links to footer social networks.

--- a/app/assets/stylesheets/cocktails.scss
+++ b/app/assets/stylesheets/cocktails.scss
@@ -4,8 +4,9 @@
 
 .cocktails {
   padding: 20px 0;
+  padding-bottom: 60px;
   h2 {
-    margin-bottom: 35px;
+    margin: 55px 0;
   }
 }
 .cocktail {
