--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -38,6 +38,11 @@
   }
   .signature {
     font-size: 100%;
+    text-align: right;
+  }
+  .credits {
+    font-size: 100%;
+    text-align: center;
   }
 }
 
